1. Метод .of [#70623 #26874]